--- a/lectures/machine-code/slides.tex
+++ b/lectures/machine-code/slides.tex
@@ -2,13 +2,14 @@
     \documentclass[handout]{beamer}
 \else
     \documentclass{beamer}
-    \setbeamercovered{transparent}
+    % \setbeamercovered{transparent}
 \fi
 
 \includeonly{machine-code}
 
 \usepackage{selthcsslides}
 \usecolortheme{lucolors}
+\usepackage{beamerutil}
 
 % The Madrid theme, for some reason, does not show bullet points in itemize
 % environments. This is a workaround to fix that.
