Added instructions about pull.rebase. +other minor things

--- a/lab-instructions/modules/acknowledgements.tex
+++ b/lab-instructions/modules/acknowledgements.tex
@@ -22,9 +22,11 @@ Om du vill hjälpa till att förbättra denna handledning, eller någonting anna
 Nedan följer en lista på personer som har bidragit med feedback:
 
 \begin{itemize}[label={},itemsep=1mm,parsep=0mm]
+    \item Alexander Sandström
     \item Björn Regnell
     \item Johan Ekberg
     \item Maximilian Waldenfeldt Uggla
+    \item Viggo Bergdahl
 \end{itemize}
 
 \vspace{0.5cm}
